--- a/painCalculator.html
+++ b/painCalculator.html
@@ -1,5 +1,6 @@
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="painCalculator.css">
       <meta charset="utf-8">
     
       <title>How Much Suffer</title>
